@@ -15,7 +15,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.48
+Release: 0.49
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -459,6 +459,10 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
+* Wed Jan  1 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.49
+- add rpmts/rpmte/rpmfi/rpmds element colors.
+- ignore items not in our rainbow (i.e. colors are functional).
+
 * Sun Dec 29 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.46
 - don't segfault with packages produced by rpm-2.93 (#80618).
 - python: eliminate hash.[ch] and upgrade.[ch], methods too.
